NEXUS: update ingress to work with the properly documented configuration options